<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/ubah_pass"
        android:textAppearance="?android:attr/textAppearanceMedium" />





    <EditText
        android:id="@+id/editTextPasswordLama"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/pass_lama"
        android:gravity="center"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>
     <EditText
        android:id="@+id/editTextPasswordBaru"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPasswordLama"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/pass_baru"
        android:gravity="center"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>
     <EditText
        android:id="@+id/editTextVerPasswordBaru"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPasswordBaru"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/ver_pass_baru"
        android:gravity="center"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonBatal"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/checkBoxShowPass"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="25dp"
        android:text="@string/batal"
        
        android:textColor="#FFFFFF"
		android:textSize="16sp"
		android:background="@drawable/buttonselector"
		android:shadowColor="#A8A8A8"
		android:shadowDx="0"
		android:shadowDy="0"
		android:shadowRadius="5" />


    <Button
        android:id="@+id/buttonUbah"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/checkBoxShowPass"
        android:text="@string/ubah" 
        android:layout_marginTop="70dp"
        android:layout_marginRight="25dp"
        
        android:textColor="#FFFFFF"
		android:textSize="16sp"
		android:background="@drawable/buttonselector"
		android:shadowColor="#A8A8A8"
		android:shadowDx="0"
		android:shadowDy="0"
		android:shadowRadius="5"
        />

    <CheckBox
        android:id="@+id/checkBoxShowPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextVerPasswordBaru"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="15dp"
        android:text="@string/tampil_pass" />

    <Button
        android:id="@+id/buttonResetPass"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBoxShowPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/reset_pass" 
        
         android:textColor="#FFFFFF"
		android:textSize="16sp"
		android:background="@drawable/buttonselector"
		android:shadowColor="#A8A8A8"
		android:shadowDx="0"
		android:shadowDy="0"
		android:shadowRadius="5"/>

</RelativeLayout>