<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_repeating" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" 
            >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/lpa"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextIDPetugas"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/posko"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <TextView
                 android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
           		 android:layout_below="@+id/editTextIDPosko"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
                 android:text="@string/masukan_id_bencana" />

             <EditText
                 android:id="@+id/editTextIDBencana"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/textView9"
                 android:layout_centerHorizontal="true"
                 android:ems="10"
                 android:hint="@string/id_bencana"
                 android:inputType="number"
                 android:gravity="center" />
			 
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextIDBencana"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/nama_posko" />

            <EditText
                android:id="@+id/editTextNamaPosko"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/nama_posko"
                android:inputType="textCapSentences"
                android:gravity="center" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/editTextNamaPosko"
                android:layout_marginTop="15dp"
                android:text="@string/lokasi_posko" 
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonSetPosisi"
                android:layout_centerHorizontal="true"
                android:text="@string/dusun"
                android:layout_marginTop="15dp" />

            <EditText
                android:id="@+id/editTextLokasiDusun"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView4"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/dusun"
                android:inputType="textCapSentences"
                android:gravity="center" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextLokasiDusun"
                android:layout_centerHorizontal="true"
                android:text="@string/kecamatan" 
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/editTextKecamatan"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/textView6"
                android:ems="10"
                android:hint="@string/kecamatan" 
                android:inputType="textCapSentences"
                android:gravity="center">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextKecamatan"
                android:layout_centerHorizontal="true"
                android:text="@string/kota" 
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/editTextKota"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/textView7"
                android:ems="10"
                android:hint="@string/kota"
                android:inputType="textCapSentences" 
                android:gravity="center"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextKota"
                android:layout_centerHorizontal="true"
                android:text="@string/provinsi" 
                android:layout_marginTop="10dp"/>

            <Spinner
                android:id="@+id/spinnerProvinsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView8"
                android:layout_centerHorizontal="true"
                android:entries="@array/nama_provinsi"
                android:prompt="@array/nama_provinsi" />

            <Button
                android:id="@+id/buttonLanjut"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinnerProvinsi"
                android:layout_alignParentRight="true"
                android:text="@string/lanjut"
                android:layout_marginRight="25dp"
                android:layout_marginTop="20dp"
                android:textColor="#FFFFFF"
				android:textSize="16sp"
				android:background="@drawable/buttonselector"
				android:shadowColor="#A8A8A8"
				android:shadowDx="0"
				android:shadowDy="0"
				android:shadowRadius="5" />

            <Button
                android:id="@+id/buttonBatal"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/spinnerProvinsi"
                android:text="@string/batal"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:textColor="#FFFFFF"
				android:textSize="16sp"
				android:background="@drawable/buttonselector"
				android:shadowColor="#A8A8A8"
				android:shadowDx="0"
				android:shadowDy="0"
				android:shadowRadius="5" />

            <Button
                android:id="@+id/buttonSetPosisi"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:layout_centerHorizontal="true"
                android:text="@string/set_lokasi" 
                android:layout_marginTop="15dp"
                
                android:textColor="#FFFFFF"
				android:textSize="16sp"
				android:background="@drawable/buttonselector2"
				android:shadowColor="#A8A8A8"
				android:shadowDx="0"
				android:shadowDy="0"
				android:shadowRadius="5"/>
            
             <ImageView
                android:id="@+id/imageViewStatusLokasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
				android:layout_alignBottom="@+id/buttonSetPosisi"
                android:layout_alignTop="@+id/buttonSetPosisi"
                android:layout_toRightOf="@+id/buttonSetPosisi"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ok"
                android:visibility="invisible" />

             <TextView
                 android:id="@+id/textView10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/textView2"
                 android:layout_marginTop="10dp"
                 android:layout_centerHorizontal="true"
                 android:text="@string/masukan_id_posko" />

             <EditText
                 android:id="@+id/editTextIDPosko"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/textView10"
                 android:layout_centerHorizontal="true"
                 android:hint="@string/id_posko"
                 android:gravity="center"
                 android:inputType="number"
                 android:ems="10" >
                 
                </EditText>

             <TextView
                 android:id="@+id/textView11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_below="@+id/textView1"
                 android:layout_marginTop="16dp"
                 android:text="@string/petugas"
                 android:textAppearance="?android:attr/textAppearanceMedium" />

             <TextView
                 android:id="@+id/textView12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/textView11"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
                 android:text="@string/masukan_id_petugas" />

             <EditText
                 android:id="@+id/editTextIDPetugas"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/textView12"
                 android:layout_centerHorizontal="true"
                 android:ems="10"
                 android:hint="@string/id_petugas"
                 android:gravity="center"
                 android:inputType="number" >
                 <requestFocus />
             </EditText>

        </RelativeLayout>

</ScrollView>