<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_repeating" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/title_2"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:text="@string/login2"
        android:textAppearance="?android:attr/textAppearanceMedium" />
<!-- 
    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/username"
        android:gravity="center">

        <requestFocus />
    </EditText>
     -->

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" 
        android:gravity="center">
<requestFocus />
    </EditText>
    
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/login"
        
        android:textColor="#FFFFFF"
		android:textSize="16sp"
		android:background="@drawable/buttonselector"
		android:shadowColor="#A8A8A8"
		android:shadowDx="0"
		android:shadowDy="0"
		android:shadowRadius="5"  />

    <Button
        android:id="@+id/buttonKeluar"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/keluar"
        
        android:textColor="#FFFFFF"
		android:textSize="16sp"
		android:background="@drawable/buttonselector"
		android:shadowColor="#A8A8A8"
		android:shadowDx="0"
		android:shadowDy="0"
		android:shadowRadius="5"  />
    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_marginRight="3dp"
        android:layout_toRightOf="@+id/textView3"
        android:contentDescription="@string/icon"
        android:src="@drawable/iconbpbpd"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/textView3"
        android:src="@drawable/uajy"
        android:layout_marginLeft="3dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:visibility="invisible"
        android:text="Text" />

</RelativeLayout>
