<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_repeating" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/set_tujuan_sms"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextNomorSMSGateaway"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/nomor"
        android:inputType="number" 
        android:gravity="center">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonBatal"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextNomorSMSGateaway"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="25dp"
        android:text="@string/batal"
        
        android:textColor="#FFFFFF"
		android:textSize="16sp"
		android:background="@drawable/buttonselector"
		android:shadowColor="#A8A8A8"
		android:shadowDx="0"
		android:shadowDy="0"
		android:shadowRadius="5" />

    <Button
        android:id="@+id/buttonUbah"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editTextNomorSMSGateaway"
        android:text="@string/ubah" 
        android:layout_marginTop="40dp"
        android:layout_marginRight="25dp"
        
        android:textColor="#FFFFFF"
		android:textSize="16sp"
		android:background="@drawable/buttonselector"
		android:shadowColor="#A8A8A8"
		android:shadowDx="0"
		android:shadowDy="0"
		android:shadowRadius="5"
        />

</RelativeLayout>